--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <!-- main section - content section -->
     <main>
 
+        <section class="sect-one-outer">
         <section class="section-1">
 
             <div class="earplug-images"></div>
@@ -76,6 +77,7 @@
             </section>
 
 
+        </section>
         </section>
 
         <section class="section-2">
@@ -320,7 +322,7 @@
             </div>
         </section>
 
-        <section class="section-7">
+        <section class="section-7"> 
             <div class="section-7-box1">
                 <p>How most people use Loop</p>
             </div>
@@ -333,24 +335,25 @@
                 </div>
                 <div class="section-7-img-box2 section-7-img-box">
                     <img src="assest/section-7-img-2.webp" alt="">
-                    <p>Sleeping & Napping </p>
-                    <span style="font-size: 1.5rem; color: #EAEAE9; display: inline-block;">Fall asleep and stay
+                    <p style="color: #333;">Sleeping & Napping </p>
+                    <span style="font-size: 1.5rem; color: #333; display: inline-block;">Fall asleep and stay
                         asleep.</span>
                 </div>
                 <div class="section-7-img-box3 section-7-img-box">
                     <img src="assest/section-7-img-3.webp" alt="">
                     <p>Nightlife & events </p>
-                    <span style="font-size: 1.5rem; color: #EAEAE9; display: inline-block;">Fall asleep and stay
+                    <span style="font-size: 1.8rem; color: #EAEAE9; display: inline-block;">Fall asleep and stay
                         asleep.</span>
                 </div>
                 <div class="section-7-img-box4 section-7-img-box">
                     <img src="assest/section-7-img-4.webp" alt="">
-                    <p >Focus</p>
-                    <span style="font-size: 1.5rem; color: #EAEAE9; display: inline-block;">Experience the
+                    <p style="color: #000;" id="box4-text">Focus</p>
+                    <span style="font-size: 1.8rem; color: #333; display: inline-block;">Experience the
                         magic, <br> while protecting your ears in style</span>
                 </div>
             </div>
         </section>
+        
     </main>
 
 
