add icons in header and update some styling

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>project</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.cdnfonts.com/css/avenir" rel="stylesheet">
+    <link defer="" media="all" onload="this.media='all'" rel="stylesheet"
+        href="https://site-assets.fontawesome.com/releases/v7.0.1/css/duotone-light.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -28,8 +30,8 @@
                 </ul>
             </div>
             <div class="box right ">
-                <p class="icon flap"><i class="fa-solid fa-flag"></i></p>
-                <p class="icon shop"><i class="fa-solid fa-cart-shopping"></i></p>
+                <p class="icon flap"><img src="assest/flag_10597877.png" alt="" srcset="" height="30px"></p>
+                <p class="icon shop"><img src="assest/bag_6322473.png" alt="" srcset="" height="32px"></p>
                 <p class="icon hamburger"><i class="fa-solid fa-bars"></i></p>
             </div>
         </nav>
@@ -40,44 +42,46 @@
     <main>
 
         <section class="sect-one-outer">
-        <section class="section-1">
-
-            <div class="earplug-images"></div>
-
             <section class="section-1">
+
                 <div class="earplug-images"></div>
 
-                <!-- Texts -->
-                <div class="carousel-text">
-                    <div class="text t1">
-                        <h1>LIVE LIFE AT YOUR VOLUME</h1>
-                        <p>Experience premium earplugs that protect your hearing without compromising on sound quality.
-                        </p>
-                        <button class="cta-btn">Shop Now</button>
+                <section class="section-1">
+                    <div class="earplug-images"></div>
+
+                    <!-- Texts -->
+                    <div class="carousel-text">
+                        <div class="text t1">
+                            <h1>LIVE LIFE AT YOUR VOLUME</h1>
+                            <p>Experience premium earplugs that protect your hearing without compromising on sound
+                                quality.
+                            </p>
+                            <button class="cta-btn">Shop Now</button>
+                        </div>
+                        <div class="text t2">
+                            <h1>UNLOCK PEAK PERFORMANE</h1>
+                            <p>From work to workouts, stay sharp with McLaren F1 Team X Loop Switch 2 - earplugs for
+                                total volume control.
+                            </p>
+                            <button class="cta-btn">Shop Now</button>
+                        </div>
+                        <div class="text t3">
+                            <h1>LOOP</h1>
+                            <p> Stay in the music and moment for long with Tomorrowland's official festive earplugs.
+                            </p>
+                            <button class="cta-btn">Shop Now</button>
+                        </div>
+                        <div class="text t4">
+                            <h1>CHAMP</h1>
+                            <p>Official earplug partner of SUNRISERS HYDERABAD
+                            </p>
+                            <button class="cta-btn">Shop Now</button>
+                        </div>
                     </div>
-                    <div class="text t2">
-                        <h1>UNLOCK PEAK PERFORMANE</h1>
-                        <p>From work to workouts, stay sharp with McLaren F1 Team X Loop Switch 2 - earplugs for total volume control.
-                        </p>
-                        <button class="cta-btn">Shop Now</button>
-                    </div>
-                    <div class="text t3">
-                        <h1>LOOP</h1>
-                        <p> Stay in the music and moment for long with Tomorrowland's official festive earplugs.
-                        </p>
-                        <button class="cta-btn">Shop Now</button>
-                    </div>
-                    <div class="text t4">
-                        <h1>CHAMP</h1>
-                        <p>Official earplug partner of SUNRISERS HYDERABAD
-                        </p>
-                        <button class="cta-btn">Shop Now</button>
-                    </div>
-                </div>
+                </section>
+
+
             </section>
-
-
-        </section>
         </section>
 
         <section class="section-2">
@@ -322,7 +326,7 @@
             </div>
         </section>
 
-        <section class="section-7"> 
+        <section class="section-7">
             <div class="section-7-box1">
                 <p>How most people use Loop</p>
             </div>
@@ -353,7 +357,7 @@
                 </div>
             </div>
         </section>
-        
+
     </main>
 
 
