--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>project</title>
+    <title>Loop Ear Plugs</title>
+     <link rel="icon" type="image/png" href="assest/favicon.webp">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.cdnfonts.com/css/avenir" rel="stylesheet">
     <link defer="" media="all" onload="this.media='all'" rel="stylesheet"
